--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -2,3 +2,4 @@ chaoscraft.gui.close=Close
 chaoscraft.gui.open.score_events=Score Events
 chaoscraft.gui.open.nnet=Neural Network
 chaoscraft.gui.open.inventory=Inventory
+chaoscraft.gui.open.biology=Biology
