Gui for observing specific org

--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -3,3 +3,4 @@ chaoscraft.gui.open.score_events=Score Events
 chaoscraft.gui.open.nnet=Neural Network
 chaoscraft.gui.open.inventory=Inventory
 chaoscraft.gui.open.biology=Biology
+chaoscraft.gui.open.observe=Observe
