Figured out how to summon orgs

--- a/src/main/resources/chaoscraft/lang/en_us.json
+++ b/src/main/resources/chaoscraft/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "chaoscraft.commands.auth.success":"Auth successful: {0}",
-  "chaoscraft.commands.auth.failed":"Auth Failed: {0}"
+  "chaoscraft.commands.auth.failed":"Auth Failed: {0}",
+  "chaoscraft.commands.ccsummon.success":"Summon Success: {0}"
 }
