Almost ready to spawn these things

--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -6,3 +6,4 @@ chaoscraft.gui.open.biology=Biology
 chaoscraft.gui.open.areaoffocus=Area Of Focus
 chaoscraft.commands.auth.success=Auth successful: %s
 chaoscraft.commands.auth.failed=Auth Failed: %s
+chaoscraft.commands.cctest=Test 2: %s
