--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -7,3 +7,8 @@ chaoscraft.gui.open.areaoffocus=Area Of Focus
 chaoscraft.commands.auth.success=Auth successful: %s
 chaoscraft.commands.auth.failed=Auth Failed: %s
 chaoscraft.commands.cctest=Test 2: %s
+chaoscraft.gui.auth.title="ChaosNet Login"
+chaoscraft.gui.mainmenu.title="ChaosMenu"
+chaoscraft.gui.mainmenu.orglist="Organisims"
+chaoscraft.gui.mainmenu.auth="Auth"
+chaoscraft.gui.auth.login="Login"
