--- a/src/main/resources/assets/chaoscraft/lang/en_us.json
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.json
@@ -7,5 +7,6 @@
   "chaoscraft.gui.mainmenu.title":"ChaosMenu",
   "chaoscraft.gui.mainmenu.orglist":"Organisims",
   "chaoscraft.gui.mainmenu.auth":"Auth",
-  "chaoscraft.gui.auth.login": "Login"
+  "chaoscraft.gui.auth.login": "Login",
+  "chaoscraft.gui.mainmenu.networkinfo": "Network Info"
 }
