Spawning still has some big issues. But I want to get this out there for others to take a look at

--- a/src/main/resources/assets/chaoscraft/lang/en_us.json
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.json
@@ -8,5 +8,6 @@
   "chaoscraft.gui.mainmenu.orglist":"Organisims",
   "chaoscraft.gui.mainmenu.auth":"Auth",
   "chaoscraft.gui.auth.login": "Login",
-  "chaoscraft.gui.mainmenu.networkinfo": "Network Info"
+  "chaoscraft.gui.mainmenu.networkinfo": "Network Info",
+  "chaoscraft.gui.networkinfo.ping-server":"Ping Server"
 }
