--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -13,3 +13,4 @@ chaoscraft.gui.mainmenu.orglist="Organisims"
 chaoscraft.gui.mainmenu.auth="Auth"
 chaoscraft.gui.auth.login="Login"
 chaoscraft.gui.mainmenu.networkinfo="Network Info"
+chaoscraft.gui.networkinfo.ping-server="Ping Server"
