--- a/src/main/resources/assets/chaoscraft/lang/en_us.json
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.json
@@ -9,5 +9,7 @@
   "chaoscraft.gui.mainmenu.auth":"Auth",
   "chaoscraft.gui.auth.login": "Login",
   "chaoscraft.gui.mainmenu.networkinfo": "Network Info",
-  "chaoscraft.gui.networkinfo.ping-server":"Ping Server"
+  "chaoscraft.gui.networkinfo.ping-server":"Ping Server",
+  "chaoscraft.gui.orgdetail.nnet": "NNet",
+  "chaoscraft.gui.orgdetail.biology": "Biology"
 }
