--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -15,4 +15,7 @@ chaoscraft.gui.auth.login="Login"
 chaoscraft.gui.mainmenu.networkinfo="Network Info"
 chaoscraft.gui.networkinfo.ping-server="Ping Server"
 chaoscraft.gui.orgdetail.nnet="NNet"
-chaoscraft.gui.orgdetail.biology="Biology"
+chaoscraft.gui.orgdetail.biology="Biology",
+chaoscraft.gui.orgdetail.debug-on="Debug On",
+chaoscraft.gui.orgdetail.debug-off="Debug Off"
+chaoscraft.gui.orgneurondetail.overridevalue="Override Value"
