Lots of gui fixes. Tried to add a new block. Preparing for v0.3.3

--- a/src/main/resources/assets/chaoscraft/lang/en_us.json
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.json
@@ -14,5 +14,7 @@
   "chaoscraft.gui.orgdetail.biology": "Biology",
   "chaoscraft.gui.orgdetail.debug-on": "Debug On",
   "chaoscraft.gui.orgdetail.debug-off": "Debug Off",
-  "chaoscraft.gui.orgneurondetail.overridevalue": "Override Value"
+  "chaoscraft.gui.orgneurondetail.overridevalue": "Override Value",
+  "chaoscraft.gui.orgdetail.scoreevents": "Score Events",
+  "chaoscraft.gui.mainmenu.species": "Species"
 }
