--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -19,3 +19,5 @@ chaoscraft.gui.orgdetail.biology="Biology",
 chaoscraft.gui.orgdetail.debug-on="Debug On",
 chaoscraft.gui.orgdetail.debug-off="Debug Off"
 chaoscraft.gui.orgneurondetail.overridevalue="Override Value"
+chaoscraft.gui.orgdetail.scoreevents="Score Events"
+chaoscraft.gui.mainmenu.species="Species"
