Added new score tracking for maze Setup TrianingRoom Button Started to split off SpawnPosProvider

--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -21,3 +21,4 @@ chaoscraft.gui.orgdetail.debug-off="Debug Off"
 chaoscraft.gui.orgneurondetail.overridevalue="Override Value"
 chaoscraft.gui.orgdetail.scoreevents="Score Events"
 chaoscraft.gui.mainmenu.species="Species"
+chaoscraft.gui.mainmenu.trainingroom="Training Room"
