--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -24,3 +24,4 @@ chaoscraft.gui.mainmenu.species="Species"
 chaoscraft.gui.mainmenu.trainingroom="Training Room"
 chaoscraft.gui.mainmenu.observer-mode-start="Start Observing"
 chaoscraft.gui.mainmenu.observer-mode-stop="Stop Observing"
+chaoscraft.gui.mainmenu.show-debug-neuron-view="Neuron Debug"
