--- a/src/main/resources/assets/chaoscraft/lang/en_us.json
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.json
@@ -20,5 +20,8 @@
   "chaoscraft.gui.mainmenu.trainingroom": "Training Room",
   "chaoscraft.gui.mainmenu.observer-mode-start": "Start Observing",
   "chaoscraft.gui.mainmenu.observer-mode-stop": "Stop Observing",
-  "chaoscraft.gui.mainmenu.show-debug-neuron-view": "Neuron Debug"
+  "chaoscraft.gui.mainmenu.show-debug-neuron-view": "Neuron Debug",
+  "chaoscraft.gui.spawnblock.maxlivingentities": "Max Living Bots",
+  "chaoscraft.gui.spawnblock.spawnpointid": "Spawn Point Id",
+  "chaoscraft.gui.save": "Save"
 }
