--- a/src/main/resources/assets/chaoscraft/lang/en_us.json
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.json
@@ -7,20 +7,22 @@
   "chaoscraft.gui.mainmenu.title":"ChaosMenu",
   "chaoscraft.gui.mainmenu.orglist":"Organisims",
   "chaoscraft.gui.mainmenu.auth":"Auth",
+  "chaoscraft.gui.mainmenu.species": "Species",
+  "chaoscraft.gui.mainmenu.trainingroom": "Training Room",
+  "chaoscraft.gui.mainmenu.observer-mode-start": "Start Observing",
+  "chaoscraft.gui.mainmenu.observer-mode-stop": "Stop Observing",
+  "chaoscraft.gui.mainmenu.show-debug-neuron-view": "Neuron Debug",
   "chaoscraft.gui.auth.login": "Login",
   "chaoscraft.gui.mainmenu.networkinfo": "Network Info",
   "chaoscraft.gui.networkinfo.ping-server":"Ping Server",
+  "chaoscraft.gui.networkinfo.env": "Env",
   "chaoscraft.gui.orgdetail.nnet": "NNet",
   "chaoscraft.gui.orgdetail.biology": "Biology",
   "chaoscraft.gui.orgdetail.debug-on": "Debug On",
   "chaoscraft.gui.orgdetail.debug-off": "Debug Off",
   "chaoscraft.gui.orgneurondetail.overridevalue": "Override Value",
   "chaoscraft.gui.orgdetail.scoreevents": "Score Events",
-  "chaoscraft.gui.mainmenu.species": "Species",
-  "chaoscraft.gui.mainmenu.trainingroom": "Training Room",
-  "chaoscraft.gui.mainmenu.observer-mode-start": "Start Observing",
-  "chaoscraft.gui.mainmenu.observer-mode-stop": "Stop Observing",
-  "chaoscraft.gui.mainmenu.show-debug-neuron-view": "Neuron Debug",
+
   "chaoscraft.gui.spawnblock.maxlivingentities": "Max Living Bots",
   "chaoscraft.gui.spawnblock.spawnpointid": "Spawn Point Id",
   "chaoscraft.gui.save": "Save"
