Fixing startup GUI

--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -29,3 +29,6 @@ chaoscraft.gui.mainmenu.show-debug-neuron-view="Neuron Debug"
 chaoscraft.gui.spawnblock.maxlivingentities="Max Living Bots"
 chaoscraft.gui.spawnblock.spawnpointid="Spawn Point Id"
 chaoscraft.gui.save="Save"
+chaoscraft.gui.trainingroomselectionoverlay.training-room-username="Training Room Username"
+chaoscraft.gui.trainingroomselectionoverlay.training-room-namespace="Training Room Namespace"
+chaoscraft.gui.trainingroomselectionoverlay.env="Environment"
