Having some fun with skins Removing logging Added crafting protection

--- a/src/main/resources/assets/chaoscraft/lang/en_us.json
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.json
@@ -28,5 +28,7 @@
   "chaoscraft.gui.save": "Save",
   "chaoscraft.gui.trainingroomselectionoverlay.training-room-username": "Training Room Username",
   "chaoscraft.gui.trainingroomselectionoverlay.training-room-namespace": "Training Room Namespace",
-  "chaoscraft.gui.trainingroomselectionoverlay.env": "Environment"
+  "chaoscraft.gui.trainingroomselectionoverlay.env": "Environment",
+
+  "chaoscraft.gui.debugmenu.stir": "Stir"
 }
