Trying to get this chunk stuff working.

--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -33,3 +33,8 @@ chaoscraft.gui.trainingroomselectionoverlay.training-room-username="Training Roo
 chaoscraft.gui.trainingroomselectionoverlay.training-room-namespace="Training Room Namespace"
 chaoscraft.gui.trainingroomselectionoverlay.env="Environment"
 chaoscraft.gui.debugmenu.stir="Stir"
+chaoscraft.gui.mainmenu.observation-options="Observation Options"
+chaoscraft.gui.observer-menu.display-scores="Display Scores"
+chaoscraft.gui.observer-menu.draw-target-lines="Draw Target Lines"
+chaoscraft.gui.observer-menu.display-inventory="Display Inventory"
+chaoscraft.gui.mainmenu.org-details="Org Details"
