--- a/src/main/resources/assets/chaoscraft/lang/en_us.json
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.json
@@ -12,6 +12,8 @@
   "chaoscraft.gui.mainmenu.observer-mode-start": "Start Observing",
   "chaoscraft.gui.mainmenu.observer-mode-stop": "Stop Observing",
   "chaoscraft.gui.mainmenu.show-debug-neuron-view": "Neuron Debug",
+  "chaoscraft.gui.mainmenu.observation-options":"Observation Options",
+
   "chaoscraft.gui.auth.login": "Login",
   "chaoscraft.gui.mainmenu.networkinfo": "Network Info",
   "chaoscraft.gui.networkinfo.ping-server":"Ping Server",
@@ -29,6 +31,9 @@
   "chaoscraft.gui.trainingroomselectionoverlay.training-room-username": "Training Room Username",
   "chaoscraft.gui.trainingroomselectionoverlay.training-room-namespace": "Training Room Namespace",
   "chaoscraft.gui.trainingroomselectionoverlay.env": "Environment",
-
-  "chaoscraft.gui.debugmenu.stir": "Stir"
+  "chaoscraft.gui.observer-menu.display-scores":"Display Scores",
+  "chaoscraft.gui.observer-menu.draw-target-lines":"Draw Target Lines",
+  "chaoscraft.gui.observer-menu.display-inventory":"Display Inventory",
+  "chaoscraft.gui.debugmenu.stir": "Stir",
+  "chaoscraft.gui.mainmenu.org-details":"Org Details"
 }
