--- a/src/main/resources/assets/chaoscraft/lang/en_us.json
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.json
@@ -24,6 +24,7 @@
   "chaoscraft.gui.orgdetail.debug-off": "Debug Off",
   "chaoscraft.gui.orgneurondetail.overridevalue": "Override Value",
   "chaoscraft.gui.orgdetail.scoreevents": "Score Events",
+  "chaoscraft.gui.orgdetail.actionbuffer": "Action Buffer",
 
   "chaoscraft.gui.spawnblock.maxlivingentities": "Max Living Bots",
   "chaoscraft.gui.spawnblock.spawnpointid": "Spawn Point Id",
