--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -21,6 +21,9 @@ chaoscraft.gui.orgdetail.debug-on="Debug On",
 chaoscraft.gui.orgdetail.debug-off="Debug Off"
 chaoscraft.gui.orgneurondetail.overridevalue="Override Value"
 chaoscraft.gui.orgdetail.scoreevents="Score Events"
+chaoscraft.gui.orgdetail.actionbuffer="Action Buffer"
+
+
 chaoscraft.gui.mainmenu.species="Species"
 chaoscraft.gui.mainmenu.trainingroom="Training Room"
 chaoscraft.gui.mainmenu.observer-mode-start="Start Observing"
