--- a/src/main/resources/assets/chaoscraft/lang/en_us.lang
+++ b/src/main/resources/assets/chaoscraft/lang/en_us.lang
@@ -43,3 +43,6 @@ chaoscraft.gui.observer-menu.display-inventory="Display Inventory"
 chaoscraft.gui.mainmenu.org-details="Org Details"
 chaoscraft.gui.alert.title=Alert
 chaoscraft.gui.alert.put-your-session-to-sleep="You already have an active TrainingRoomSession. \nYou must log on to ChaosNet.ai and put that session to `sleep` \n before you can start another."
+
+chaoscraft.gui.matchmanagerblock.matchId="Match Id"
+chaoscraft.gui.matchmanagerblock.matchDurationSeconds="Match Duration (Seconds)"
